crates/lang/macro/tests/ui/fail/H-02-invalid-as-dependency.stderr
error: expected a bool literal for `compile_as_dependency` pro! config argument
 --> $DIR/H-02-invalid-as-dependency.rs:3:17
  |
3 | #[pro::contract(compile_as_dependency = "yes")]
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
